4.x: required fixes to builders and other tooling (#8076)
* Support for deprecated properties in blueprints
* Required fixes for class model.
* Enum for access modifier, and for modifiers
* Fixes in TypeInfoFactory to correctly handle access modifier
* Fixes in blueprints that were (incorrectly) public
* Support for custom type annotation for blueprint options
* Fixes in blueprint processor (correct javadoc)
* Support for checked exceptions in TypeInfoFactory and TypedElementInfo
* Support for originating element in TypedElementInfo and TypeInfo

Signed-off-by: Tomas Langer <tomas.langer@oracle.com>
Co-authored-by: David Kral <david.kral@oracle.com>